# EANRootHalfs

./: .gitignore  CMakeLists.txt  Doxyfile  FIRSTPAGE.md  Interval.h  app_gui.h  bisection.cpp  bisection.h  frame.cpp  frame.h  gui.h  main.cpp  polynomial.cpp  polynomial.h  todo.txt
.github/workflows/: Deploy.yml
